/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package api.common;

/*
Config
*/
option java_package = "io.github.pnoker.api.common";
option java_outer_classname = "RProto";
option objc_class_prefix = "Common";
option java_multiple_files = true;

/*R DTO*/
message GrpcR {
  /*是否成功*/
  bool ok = 1;

  /*状态码*/
  string code = 2;

  /*消息*/
  string message = 3;
}
